[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Items/Effects/SpeedUp.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Perks/PerkCard.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Perks/PerkSpeedUp.tscn" type="PackedScene" id=3]

[node name="PerkCard" type="PanelContainer"]
anchor_right = 0.675781
anchor_bottom = 1.41556
margin_right = -512.0
margin_bottom = -974.0
rect_min_size = Vector2( 200, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
perk = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 519.0
margin_bottom = 293.004

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 511.0
margin_bottom = 286.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 511.0
margin_bottom = 14.0

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 75.0
margin_bottom = 14.0
text = "PERK_NAME"

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 467.0
margin_right = 511.0
margin_bottom = 14.0
size_flags_horizontal = 10
text = "RARITY"
align = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 511.0
margin_bottom = 22.0

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 192.0
margin_top = 26.0
margin_right = 320.0
margin_bottom = 154.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 26.0
margin_right = 511.0
margin_bottom = 40.0
text = "THIS IS THE DESCRIPTION"
autowrap = true
